--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         J'effectue mon alternance en tant que <strong>coordinateur de domaine - MOE informatique</strong> à la <abbr title="Régie Autonome des Transports Parisiens">RATP</abbr>, au département des Systèmes d'Information et de Télécommunications.
       </p>
       <p>
-        Ce site vous permettra de voir l'ensemble de <strong><a href="portfolio">mes travaux</a></strong>. Mon <a href="/data/CV_Remy_Hannequin.pdf"><abbr title="Curriculum Vitae">CV</abbr> (<abbr title="Portable Document Format">PDF</abbr>)</a> et de plus amples informations me concernant sont disponibles sur <strong><a href="profil">mon profil</a></strong>. Vous pouvez également <strong><a href="contact">me contacter</a></strong> pour toute information complémentaire.
+        Ce site vous permettra de voir l'ensemble de <strong><%= link_to 'mes travaux', portfolio_path %></strong>. De plus amples informations me concernant sont disponibles sur <strong><a href="/profile">mon profil</a></strong>. Vous pouvez également <strong><a href="/contact">me contacter</a></strong> pour toute information complémentaire.
       </p>
       <p>
         Je vous souhaite une agréable visite.
