--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,27 +2,13 @@
 
 <h1>Profil</h1>
 <div class="row-fluid head">
-  <div class="span6 nav">
+  <div class="nav">
     <ul>
       <li><a href="#competences">Compétences</a></li>
       <li><a href="#experiences">Expériences</a></li>
       <li><a href="#formation">Formation</a></li>
       <li><a href="#personnel">Personnel</a></li>
     </ul>
-  </div>
-  <div class="span6 cv">
-    <p>
-      Mon CV aux formats :
-      <a href="CV_Remy_Hannequin.pdf"><abbr title="Portable Document Format">PDF</abbr></a> /
-      <a href="curriculum-vitae"><abbr title="HyperText Markup Language">HTML</abbr></a>
-    </p>
-    <p>
-      Pour lire un fichier PDF :
-      <ul>
-        <li><a href="http://remyhannequin.free.fr/telechargements/adobe-pdf-reader.exe">Télécharger Adobe PDF Reader</a></li>
-        <li><a href="http://remyhannequin.free.fr/telechargements/foxit-pdf-reader.exe">Télécharger Foxit PDF Reader</a></li>
-      </ul>
-    </p>
   </div>
 </div>
 
