Update profile information

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -37,6 +37,13 @@
     }
     .nav {
       margin-bottom: 0;
+
+      ul {
+        text-align: center;
+      }
+      li {
+        display: inline;
+      }
     }
   }
 
