Rename page 'profile' into 'about'

--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -19,7 +19,7 @@
       <span id="gravatar" class="visible-desktop"><a href="/"></a></span>
       <ul class="nav nav-pills pull-right">
         <li class="<%= 'active' if action_name     == 'home' %>"><a href="/">Accueil</a></li>
-        <li class="<%= 'active' if action_name     == 'profile' %>"><a href="/profile">Profil</a></li>
+        <li class="<%= 'active' if action_name     == 'about' %>"><a href="/about">Profil</a></li>
         <li class="<%= 'active' if controller_name == 'portfolio' %>"><a href="/portfolio">Portfolio</a></li>
         <li class="<%= 'active' if action_name     == 'contact' %>"><a href="/contact">Contact</a></li>
         <!-- TODO: check URLs -->
@@ -53,13 +53,13 @@
           <h3>Profil</h3>
           <hr />
           <ul>
-            <li><a href="/profile#formation">Formation</a></li>
+            <li><a href="/about#formation">Formation</a></li>
             <hr />
-            <li><a href="/profile#experiences">Expériences</a></li>
+            <li><a href="/about#experiences">Expériences</a></li>
             <hr />
-            <li><a href="/profile#competences">Compétences</a></li>
+            <li><a href="/about#competences">Compétences</a></li>
             <hr />
-            <li><a href="/profile#personnel">Personnel</a></li>
+            <li><a href="/about#personnel">Personnel</a></li>
             <hr />
           </ul>
         </div>
