--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         J'effectue mon alternance en tant que <strong>coordinateur de domaine - MOE informatique</strong> à la <abbr title="Régie Autonome des Transports Parisiens">RATP</abbr>, au département des Systèmes d'Information et de Télécommunications.
       </p>
       <p>
-        Ce site vous permettra de voir l'ensemble de <strong><%= link_to 'mes travaux', portfolio_path %></strong>. De plus amples informations me concernant sont disponibles sur <strong><a href="/profile">mon profil</a></strong>. Vous pouvez également <strong><a href="/contact">me contacter</a></strong> pour toute information complémentaire.
+        Ce site vous permettra de voir l'ensemble de <strong><%= link_to 'mes travaux', portfolio_path %></strong>. De plus amples informations me concernant sont disponibles sur <strong><a href="/about">mon profil</a></strong>. Vous pouvez également <strong><a href="/contact">me contacter</a></strong> pour toute information complémentaire.
       </p>
       <p>
         Je vous souhaite une agréable visite.
@@ -123,11 +123,10 @@
         </ul>
       </div>
     </div>
-    <p><a href="/profile">Voir mon profil complet</a></p><!-- TODO: check URL %-->
+    <p><a href="/about">Voir mon profil complet</a></p>
     <div class="span works" id="work">
       <h1>Derniers travaux</h1>
       <div class="galery"></div>
-      <!-- TODO: portfolio -->
     </div>
   </div>
 
