--- a/app/views/pages/sitemap.html.erb
+++ b/app/views/pages/sitemap.html.erb
@@ -4,12 +4,12 @@
   <ul>
     <li><%= link_to 'Accueil', root_path %></li>
     <li>
-      <a href="/profile">Profil</a>
+      <a href="/about">Profil</a>
       <ul>
-        <li><a href="/profile#formation">Formation</a></li>
-        <li><a href="/profile#experiences">Expériences</a></li>
-        <li><a href="/profile#competences">Compétences</a></li>
-        <li><a href="/profile#personnel">Personnel</a></li>
+        <li><a href="/about#formation">Formation</a></li>
+        <li><a href="/about#experiences">Expériences</a></li>
+        <li><a href="/about#competences">Compétences</a></li>
+        <li><a href="/about#personnel">Personnel</a></li>
         <li><a href="/curriculum-vitae">CV</a></li>
       </ul>
     </li>
