--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -9,7 +9,10 @@
   <meta name="description" content="Portfolio de Rémy Hannequin, passionné du Web. Développeur Web JavaScript PHP Ruby. <%= @description_page %>" />
   <meta name="keywords" content="internet, developpeur, developer, web, php, symfony, git, html, css, javascript, ruby <%= @keywords %>" />
   <%= csrf_meta_tags %>
-  <!-- TODO Facebook meta tags -->
+  <meta property="og:title" content="Rémy Hannequin - Développeur Web - <%= @title %>" />
+  <meta property="og:url" content="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>" />
+  <meta property="og:site_name" content="Portfolio de Rémy Hannequin, passionné du Web. Développeur Web PHP Symfony. <%= @description_page %>" />
+  <meta property="og:image" content="/img/portrait1.jpg" />
   <!-- TODO no follow page 404 -->
 </head>
 <body>
