--- a/app/views/portfolio/show.html.erb
+++ b/app/views/portfolio/show.html.erb
@@ -8,7 +8,7 @@
       <% end %>
     </p>
     <p class="description">
-      <%= @project.description %>
+      <%= @project.description.html_safe %>
     </p>
   </div>
 
@@ -34,7 +34,7 @@
 
 <div class="row-fluid creation-content">
   <div class="span">
-    <%= @project.content %>
+    <%= @project.content.html_safe %>
   </div>
 </div>
 
