--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -141,7 +141,7 @@
         {{/each}}
       </ul>
       <p class="description">
-        {{ description }}
+        {{{ description }}}
       </p>
       <p class="more">
         <a href="<%= portfolio_path %>/{{ slug }}">En savoir +</a>
