Use Twitter gem for Twitter API v1.1

--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -96,8 +96,8 @@
             <li><a href="/contact">Contact</a></li>
             <hr />
           </ul>
+        </div>
       </div>
-
     </div>
   </footer>
 
