fix some translations structure

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         <%= raw t('.presentation.ratp') %>
       </p>
       <p>
-        <%= raw t('.presentation.resources') %>
+        <%= raw t('.presentation.resources', :href => link_to('mes travaux', portfolio_path)) %>
       </p>
       <p>
         <%= raw t('.presentation.conclusion') %>
